# Rendering_Laboratory

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_meta.py  test_ray.py
docs/: API and Contribution.md  CG Mathematics.md  Engine Architecture.md  Implementation Blueprint.md  Optimization and Scalability.md  PRD.md  SDS.md  Testing and QA.md  UI and UX.md  Vision, Research and Evolution.md
renderlab/animation/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/camera/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/config/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/core/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/geometry/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/lighting/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/logging/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/materials/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/math/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/performance/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/renderer/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/scene/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/serialization/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  validators.py
renderlab/ui/: builders.py  exceptions.py  factories.py  interfaces.py  models.py  services.py  threads.py  validators.py
(+14 files in other folders)
